--- a/_sass/layouts/_about.scss
+++ b/_sass/layouts/_about.scss
@@ -3,6 +3,7 @@
   display: flex;
   align-items: center;
   min-height: 100vh;
+  padding: 3em 0;
   h2 {
     margin: 0 0 1.2em 0;
   }
