--- a/_sass/layouts/_contact.scss
+++ b/_sass/layouts/_contact.scss
@@ -2,6 +2,7 @@
     min-height: 100vh;
     display: flex;
     align-items: center;
+    padding: 3em 0;
 
     h2 {
         color: var(--theme-color);
